--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -25,7 +25,7 @@
 
   @include onDesktop() {
     margin-inline: auto;
-    max-width: 1020px;
+    // max-width: 1020px;
     padding-inline: 120px;
   }
 }
